<package>
  <name>amr_robots_gazebo</name>
  <version>1.0.0</version>
  <description>Example gazebo world, model and launch files for simulating Adept MobileRobots/ActivMedia robots for use with ROS</description>
  <maintainer email="reed.hedges@adept.com">Reed Hedges</maintainer> 
  <url type="website">http://wiki.ros.org/Robots/Pioneer</url>
  <author email="reed.hedges@adept.com">Reed Hedges</author>
  <author>Adept MobileRobots</author>
  <license>BSD</license>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/models" />
  </export>
</package>
